--- a/src/app/rick-wiki/pages/character-page/character-page.component.html
+++ b/src/app/rick-wiki/pages/character-page/character-page.component.html
@@ -7,7 +7,7 @@
     <!-- characters -->
     <main class="col ">
       <article class="mb-4 mt-2 mt-sm-0 ">
-        <app-shearch-box></app-shearch-box>
+        <app-search-box></app-search-box>
       </article>
       <app-character-card></app-character-card>
     </main>
